--- a/myproject/myapp/static/static/css/style.css
+++ b/myproject/myapp/static/static/css/style.css
@@ -42,3 +42,8 @@ button {
     margin-bottom: 5px;
     border-radius: 4px;
 }
+
+.completed {
+    text-decoration: line-through;
+    color: gray;
+}
