Added Dark mode feature

--- a/myproject/myapp/templates/templates/myapp/index.html
+++ b/myproject/myapp/templates/templates/myapp/index.html
@@ -16,6 +16,10 @@
         </form>
         <ul id="habit-list"></ul>
     </div>
+    <div class="toggle-container">
+        <label for="dark-mode-toggle">Dark Mode</label>
+        <input type="checkbox" id="dark-mode-toggle">
+    </div>
     <script src="{% static 'js/app.js' %}"></script>
 </body>
 </html>
