--- a/myproject/myapp/templates/templates/myapp/index.html
+++ b/myproject/myapp/templates/templates/myapp/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habit Tracker</title>
-<link rel="stylesheet" href="Capstone-App/myproject/myapp/css/style.css">
+    <link rel="stylesheet" href="Capstone-App/myproject/myapp/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="app">
