--- a/myproject/myapp/templates/templates/myapp/Capstone-App/myproject/myapp/css/style.css
+++ b/myproject/myapp/templates/templates/myapp/Capstone-App/myproject/myapp/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f4f4f9;
+    background-color: #22ff6f;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,7 +56,7 @@ body.dark-mode button {
 }
 
 .app {
-    background: white;
+    background: rgb(165, 255, 195);
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
@@ -87,14 +87,16 @@ h1 {
     margin-bottom: 20px;
     transition: color 0.3s ease;
 }
+
 button {
-    padding: 10px 20px;
-    border: none;
+    padding: 8px 16px;
     border-radius: 4px;
     background-color: #007bff;
     color: white;
+    border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-left: 5px; 
 }
 
 
@@ -103,14 +105,20 @@ button:hover {
 }
 
 
-#habit-list {
-    list-style-type: none;
-    padding: 0;
+#habit-list li {
+    padding: 15px;
+    background: #f9f9f9;
+    margin-bottom: 15px; 
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: background-color 0.3s ease;
 }
 
 #habit-list li {
     padding: 15px;
-    background: #f9f9f9;
+    background: #7bef86;
     margin-bottom: 10px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
