Fixed html paths

--- a/myproject/myapp/templates/templates/myapp/Capstone-App/myproject/myapp/habit_list.html
+++ b/myproject/myapp/templates/templates/myapp/Capstone-App/myproject/myapp/habit_list.html
@@ -3,4 +3,4 @@
     <li>{{ habit.name }}</li>
     
 </ul>
-<a href="url add_habit">Add a new habit</a>
+<a href="add_habit.html">Add a new habit</a>
